# websocket_chat

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  pyproject.toml
app/: alembic.ini
app/application/: dependencies.py  mediator.py
app/application/commands/: create_chat.py  create_user.py  send_message.py
app/application/events/: __init__.py
app/application/exceptions/: mediator.py
app/application/handlers/: chat_created_handler.py  notify_devices_handler.py
app/domain/entities/: chats.py  messages.py  read_receipts.py  users.py
app/domain/events/: base.py  chats.py  messages.py  read_receipts.py  users.py
app/domain/exceptions/: base.py  chats.py  messages.py  users.py
app/domain/values/: base.py  chats.py  messages.py  users.py
app/infrastructure/database/: session.py
app/infrastructure/database/models/: chat.py  chat_participant.py  message.py  read_receipt.py  user.py
app/infrastructure/migrations/: env.py
app/infrastructure/migrations/versions/: 57a391deb4f7_init.py
app/infrastructure/redis/: pubsub.py
app/infrastructure/repositories/: chat.py  message.py  read_receipt.py  user.py
app/manager/: websocket_manager.py
app/presentation/api/: main.py
app/presentation/api/endpoints/: ws.py
app/presentation/api/schemas/: chat.py  message.py  read_receipt.py  user.py
app/settings/: config.py
app/tests/domain/test_entities/: test_chat.py  test_read_receipt.py  test_user.py
app/tests/domain/test_events/: test_chat_events.py  test_message_events.py  test_user_events.py  (+1 more)
docker-compose/: application.yml  storages.yml
(+7 files in other folders)
