[tool.poetry]
name = "websocket-chat"
version = "0.1.0"
description = ""
authors = ["7project"]
license = "MIT"
readme = "README.md"
packages = [{include = "websocket_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
